CHATS_SIT/force-app/main/default/objects/T_ACF801_RECV_QLTY_INTFC__c.object
<CustomObject>
    <fields>
        <fullName>CDE_STATUS_PRCSD__c</fullName>
        <label>Code Status Processed</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_SITE__c</fullName>
        <label>Code Site Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_EFFV_RATING__c</fullName>
        <label>Rating Effective Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_EXPIRATION_RATING__c</fullName>
        <label>Rating Expiration Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_FILE_PRCSD__c</fullName>
        <label>File processed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_MONTH_REPORT__c</fullName>
        <label>Monthly Report date</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_RECVD__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Identifier Provider</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_RATING__c</fullName>
        <label>Identifier Rating</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_COUNTY__c</fullName>
        <label>County Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_PROVR__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUM_OF_CHILDREN__c</fullName>
        <label>Number of Children</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>T_ACF801_RECV_QLTY_INTFC</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_ACF801_RECV_QLTY_INTFC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>